client/src/scss/partials/_home.scss
/*
  Styles for home page
  IMGE 590 - Project 3 - The Product

  Aaron Romel
  Jesse Cooper

  "Drop your joust, boys" - Unkown
*/

nav {
  height: 75px;
  width: 100%;
  position: absolute;
  top: 0;
  background: $primary-color-dark; /* Old browsers */
  background: -moz-linear-gradient(top, $primary-color-light 0%, $primary-color 44%, $primary-color-dark 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top, $primary-color-light 0%,$primary-color 44%,$primary-color-dark 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, $primary-color-light 0%,$primary-color 44%,$primary-color-dark 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

.navButton {
  width: 100px;
  height: 50px;
  line-height: 50px;
  border: 2px solid $light-gray;
  color: $light-gray;
  border-radius: 5px;
  background-color: rgba(0,0,0,0);
  position: absolute;
  right: 75px;
  top: 12px;
}

.navButton:hover {
  background-color: white;
  color: $primary-color;
  cursor: pointer;
}

#home-container {
  width: 100%;
  height: calc(100vh - 75px);
  overflow-y: auto;
  position: relative;
  top: 75px;
}

#hero-container {
  width: 40%;
  height: calc(100vh - 75px);
  position: relative;
}

#hero-container h1 {
  font-size: 3.5em;
  color: $primary-dark-text;
  width: 400px;
  @include position-absolute(100px, 100px);
}

#hero-container img {
  position: absolute;
  left: 0;
  bottom: 0;
}

#login-controls {
  @include material(400px, 300px, $light-gray, rgba(0,0,0,0.5));
  position: absolute;
  right: 75px;
  top: 100px;
}

#login-controls input[type='text'] {
  display: block;
  margin: auto;
  width: 200px;
  padding: 4px;
  font-size: 1em;
  border-radius: 4px;
  border: 2px solid $dark-gray;
  position: relative;
  margin-bottom: 10px;
  top: 25px;
}

#join-button {
  @include material-button(212px, 40px, $primary-color, $dark-gray);
  @include absolute-centered(50%, 200px);
  color: white;
  font-size: 1em;
}

